--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@iconify/react": "^6.0.0",
     "pretendard": "^1.3.9",
     "react": "^19.1.1",
+    "react-daum-postcode": "^3.2.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2"
   },
