--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@iconify/react": "^6.0.0",
+    "axios": "^1.11.0",
     "pretendard": "^1.3.9",
     "react": "^19.1.1",
     "react-daum-postcode": "^3.2.0",
