--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@iconify/react": "^6.0.0",
     "axios": "^1.11.0",
+    "date-fns": "^4.1.0",
     "pretendard": "^1.3.9",
     "react": "^19.1.1",
     "react-daum-postcode": "^3.2.0",
