--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-daum-postcode": "^3.2.0",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "recharts": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
