--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@iconify/react": "^6.0.0",
+    "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "pretendard": "^1.3.9",
