--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@iconify/react": "^6.0.0",
     "@reduxjs/toolkit": "^2.9.0",
+    "@tanstack/react-query": "^5.87.4",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "pretendard": "^1.3.9",
