--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
+    "react-spinners": "^0.17.0",
     "recharts": "^3.2.0"
   },
   "devDependencies": {
