--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.87.4",
     "axios": "^1.12.2",
     "date-fns": "^4.1.0",
+    "jwt-decode": "^4.0.0",
     "pretendard": "^1.3.9",
     "react": "^19.1.1",
     "react-daum-postcode": "^3.2.0",
@@ -22,13 +23,16 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "react-spinners": "^0.17.0",
-    "recharts": "^3.2.0"
+    "recharts": "^3.2.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@types/redux-persist": "^4.0.0",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
