--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.87.4",
     "axios": "^1.12.2",
     "date-fns": "^4.1.0",
+    "firebase": "^12.3.0",
     "jwt-decode": "^4.0.0",
     "pretendard": "^1.3.9",
     "react": "^19.1.1",
@@ -42,6 +43,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "vite-plugin-pwa": "^1.0.3"
   }
 }
